--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-08-08 00:00:29
+lastsearch = 2024-08-08 00:32:04
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -84,7 +84,7 @@ url = https://shopee.vn/search?keyword=bộ chăn ga gối sông hồng doremon 
 [demxanh.com]
 match = -25.0%%
 title = Chăn Ga Gối Đệm chính hãng giá rẻ nhất Hà Nội
-url = https://demxanh.com/chan-ga-goi-dem.html
+url = https://demxanh.com/chan-ga-goi-dem.html?srsltid=AfmBOoopx8FE2v-EgA2NbcCiJQyGLh7lyDvptC7VTrT0viZCxrCOuk27
 
 [changagoibenlinda.com]
 match = -12.5%%
