--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-08-08 00:14:13
+lastsearch = 2024-08-08 00:51:44
 
 [shopee.vn]
 match = 0.0%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [demxanh.com]
-match = -25.0%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOoqx58hX1pf_kipu71CH9YXvo1Nfsx1uGaOfdIy6OQX7oJDGzjgc
+match = 60.9%%
+title = Chiếu điều hòa Nhật Bản
+url = https://demxanh.com/chieu-dieu-hoa-nhat-ban.html
 
 [giadunganhvan.vn]
 match = 70.8%%
@@ -32,14 +32,14 @@ title = CHIẾU ĐIỀU HÒA CAO SU NON
 url = https://giadunganhvan.vn/chieu-dieu-hoa-cao-su-non-p769.html
 
 [thegioinem.com]
-match = 29.2%%
-title = 10+ mẫu chiếu điều hoà hot nhất năm
-url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
+match = -16.7%%
+title = Chiếu Điều Hòa Tencel Thoáng Mát Giảm 25%% Tại ...
+url = https://thegioinem.com/chieu-dieu-hoa-3d-tencel.html
 
 [sieuthidem.vn]
 match = 16.7%%
 title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOorgb5mlf9X7q66YScmsH5rrSdAUCMSOvJ4Awv2scNQ7Zy45zL08
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
 
 [lybalansieucute.com]
 match = 29.2%%
@@ -52,9 +52,9 @@ title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào 
 url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [www.lazada.vn]
-match = 8.3%%
-title = Chiếu Mây Điều Hòa Chiếu mát mùa hè. ...
-url = https://www.lazada.vn/products/chieu-may-dieu-hoa-chieu-mat-mua-he-chieu-dieu-hoa-16x-2m-loai-tot-thoang-khi-mat-ruoi-ben-dep-co-the-gap-gon-giup-ban-tan-huong-nhung-giay-phut-thu-gian-i517380866.html?srsltid=AfmBOooD4S83S922MfKvM58vDs2AypmMwkC61AyRBP6ZVylWWFfZOrHr
+match = -33.3%%
+title = Chiếu Mây Điều Hòa Hàng Xuất Khẩu Cao Cấp,Đủ kích cỡ
+url = https://www.lazada.vn/products/chieu-may-soi-nho-dieu-hoa-chieu-dieu-hoa-16-x-19m-chieu-may-dieu-hoa-hang-xuat-khau-cao-capdu-kich-co-chieu-du-lich-chieu-an-com-chieu-trai-giuong-i2106465649.html
 
 [ababy.com.vn]
 match = -4.2%%
