--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-08-07 20:40:13
+lastsearch = 2024-08-08 00:47:54
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -19,7 +19,7 @@ url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 [demxanh.com]
 match = -6.5%%
 title = Đệm bông ép Dreamland chống thoái hóa cột sống
-url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html
+url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html?srsltid=AfmBOorqKa9y_OrKmddeh2GOgj1XffYwqatE5H6nKOQX0U_5Qcqgc3wH
 
 [dreamland.vn]
 match = -21.1%%
@@ -39,7 +39,7 @@ url = https://dongahome.vn/dem-lo-xo-cao-cap-hanvico-hera
 [vuanem.com]
 match = -35.5%%
 title = Để chuyện phòng the lên đỉnh, bạn nên chọn loại nệm nào?
-url = https://vuanem.com/blog/de-chuyen-phong-the-len-dinh-chon-nem-nao.html
+url = https://vuanem.com/blog/de-chuyen-phong-the-len-dinh-chon-nem-nao.html?srsltid=AfmBOoqZjam3in3bSTMWWFO-7mxR5QSj9bFXqvA82C0FBxqkHVDaFAzi
 
 [uannga.vn]
 match = -19.4%%
