--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-08 00:23:39
+lastsearch = 2024-08-08 00:48:15
 
 [burningman.org]
-match = 0.0%%
-title = 
+match = -60.0%%
+title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
-match = -266.7%%
-title = exploring nha trang (vinpearl, night market, koi cafe & more ...
-url = https://www.youtube.com/watch?v=I9VBBWHbOw8
+match = -233.3%%
+title = Tony Robbins: STOP Wasting Your LIFE! (Change Everything ...
+url = https://www.youtube.com/watch?v=O9F19ban7A4
 
 [www.hcso.org]
 match = 7.7%%
@@ -147,9 +147,9 @@ title = U.S. Food and Drug Administration
 url = https://www.fda.gov/
 
 [boardofwatersupply.com]
-match = -166.7%%
-title = Trang web mua vÃ© bÃ³ng Ä'Ã¡ nÆ°á»›c ngoÃ i
-url = https://boardofwatersupply.com/appKUUSr/79405.csv
+match = -73.3%%
+title = Bongdatructuyen 24 7 táºp 1 trang 118
+url = https://boardofwatersupply.com/appGgWZQDXVkf
 
 [steamcommunity.com]
 match = -193.3%%
