--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-08-07 23:36:09
+lastsearch = 2024-08-08 00:49:38
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -123.8%%
 title = A Critical Pronouncing Dictionary, and Expositor of the ...
-url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKDo7Estp&sig=ACfU3U0V1NTkMUa4LpnBtkfut2S621wcyA&hl=en&sa=X&ved=2ahUKEwjYi6iPqOOHAxVNg4kEHXbOJVsQ6AF6BAgbEAM
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKDo8ywuo&sig=ACfU3U1XZxUgRrqnuDKnnysOflmUTYaPNg&hl=en&sa=X&ved=2ahUKEwiJ0M3FuOOHAxV0MjQIHRLcEIYQ6AF6BAg6EAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -252,9 +252,9 @@ title = Idarubicine Treatment of Acute Myeloblastic Leukemia During ...
 url = https://www.jcog.com.tr/pdf/?pdf=d8ef007c2333e3bc22fd94ac0c236dcb
 
 [www.formatbiz.it]
-match = -76.2%%
-title = Nem Dubrovnik 2024 confirms a record of partecipants
-url = https://www.formatbiz.it/dettNews.aspx?id=11256
+match = -66.7%%
+title = NEM Dubrovnik 2025 Dates Announced Following ...
+url = https://www.formatbiz.it/dettNews.aspx?id=11677
 
 [yro.slashdot.org]
 match = -114.3%%
