--- a/images/ga-phu-es1807-180x200/config.ini
+++ b/images/ga-phu-es1807-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-es1807-180x200.html
 lastopen = 2024-06-07 01:02:20
 
 [search]
-lastsearch = 2024-08-07 22:52:30
+lastsearch = 2024-08-08 01:44:24
 
 [everonvn.com.vn]
 match = -114.3%%
 title = Bộ Everon Es1804 - Esmeranda - chăn ga gối đệm Everon
-url = https://everonvn.com.vn/everon/606/bo-everon-es1804?srsltid=AfmBOoogkBQgmKcOpLbdFjw_xHOmrA5oG6J_XROBNGwHNzR1UMI1Lujp
+url = https://everonvn.com.vn/everon/606/bo-everon-es1804
 
 [everonhanoi.vn]
 match = -23.8%%
