--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-08-08 04:43:55
+lastsearch = 2024-08-08 09:17:57
 
 [shopee.vn]
 match = -28.0%%
@@ -59,7 +59,7 @@ url = https://cellphones.com.vn/sforum/phim-dai-loan
 [www.luavietours.com]
 match = -36.0%%
 title = ĐÀI LOAN 5N4Đ | ĐÀI BẮC – ĐÀI TRUNG – CAO HÙNG
-url = https://www.luavietours.com/du-lich/du-lich-nuoc-ngoai/chau-a/dai-loan/dai-loan-5n4d-dai-bac-dai-trung-cao-hung-2/?date=31-08
+url = https://www.luavietours.com/du-lich/du-lich-nuoc-ngoai/chau-a/dai-loan/dai-loan-5n4d-dai-bac-dai-trung-cao-hung-2/?date=20-07
 
 [www.traveloka.com]
 match = -76.0%%
@@ -147,9 +147,9 @@ title = Secured Home of canbangdongclc.com
 url = https://canbangdongclc.com/
 
 [tuoitre.vn]
-match = -72.0%%
-title = Trung Quốc tung video mô phỏng trút thẳng 'mưa tên lửa ...
-url = https://tuoitre.vn/trung-quoc-tung-video-mo-phong-trut-thang-mua-ten-lua-xuong-dao-dai-loan-20240524141155724.htm
+match = -60.0%%
+title = Động đất mạnh 7,2 độ ở Đài Loan, 9 người chết và 821 ...
+url = https://tuoitre.vn/dai-loan-nhat-ban-philippines-phat-canh-bao-sau-dong-dat-20240403082258882.htm
 
 [baothuathienhue.vn]
 match = -72.0%%
