--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-08-08 05:33:00
+lastsearch = 2024-08-08 09:21:50
 
 [www.bible.com]
 match = -135.7%%
@@ -22,14 +22,14 @@ title = Màn chụp tự bung 2016 - F2 - xanh viền xanh
 url = https://mungmocmien.com/products/man-chup-tu-bung-2016-code-f2-9
 
 [munghoangphat.com]
-match = -135.7%%
-title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
-url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
+match = -21.4%%
+title = màn chụp đỉnh vuông tự bung
+url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
 
 [manthutrang.com]
-match = -207.1%%
-title = Hướng dẫn phân biệt màn tự bung cao cấp và màn nhái ...
-url = https://manthutrang.com/blogs/news/huong-dan-phan-biet-man-tu-bung-cao-cap-va-man-nhai-gia-re
+match = -221.4%%
+title = Màn chụp tự bung cho người lớn: Tư vấn chọn mua và sử ...
+url = https://manthutrang.com/blogs/news/man-chup-tu-bung-cho-nguoi-lon-tu-van-chon-mua-va-su-dung
 
 [easydream.vn]
 match = -185.7%%
