--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-08-07 22:45:50
+lastsearch = 2024-08-08 09:20:45
 
 [www.everonvn.vn]
-match = 69.2%%
-title = Đệm lò xo Everon Pocket Premium
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-pocket-premium.html
+match = -61.5%%
+title = Đệm Everon Chính Hãng, Khuyến mại giảm giá đặc biệt
+url = https://www.everonvn.vn/san-pham/dem-everon.html
 
 [www.diepxuan.com]
 match = 61.5%%
@@ -27,9 +27,9 @@ title = Đệm Lò Xo Everon Pocket Pops
 url = https://demchinhhang.com/products/dem-lo-xo-tui-everon-pocket-pops
 
 [nemhana.com]
-match = -53.8%%
-title = Khám phá bí quyết tái tạo mỗi ngày cùng nệm Everon
-url = https://nemhana.com/nem-everon/
+match = 30.8%%
+title = Nệm lò xo Everon Pocket Premium - Nệm Hana
+url = https://nemhana.com/nem-lo-xo-everon-pocket-premium/
 
 [go2joyvn.myharavan.com]
 match = 26.9%%
@@ -62,9 +62,9 @@ title = Nệm lò xo túi Everon Pocket pops 2024
 url = https://nemgiakho.com/nem-lo-xo-tui-everon-pocket-pops.html
 
 [everon.com.vn]
-match = -34.6%%
-title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt Nam ...
-url = https://everon.com.vn/dem-lo-xo-pocket-pops/?srsltid=AfmBOooZuCtEQktfvLnME2QFJte0SklREgweCvOPbnO8NOHZ9xRmrQc1
+match = -19.2%%
+title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt ...
+url = https://everon.com.vn/dem-lo-xo-pocket-pops/
 
 [demxanh.com]
 match = -19.2%%
