--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-08-08 07:01:15
+lastsearch = 2024-08-08 09:07:10
 
 [www.reddit.com]
 match = -82.6%%
@@ -605,4 +605,9 @@ url = https://journals.sagepub.com/doi/10.1177/0308518X211037688
 match = -78.3%%
 title = <p>Southeast Asia, Building the Navy's Bases</p>
 url = https://www.history.navy.mil/content/dam/museums/Seabee/Online Reading Room/Manuals and Publications/Publications/Southeast Asia, Building The Bases, A History Of Const.pdf
+
+[www.mycouriertribune.com]
+match = -104.3%%
+title = 'Big Brother' Sneak Peek: Kimo Tells Tucker a Key Secret ...
+url = https://www.mycouriertribune.com/lifestyles/entertainment/big-brother-sneak-peek-kimo-tells-tucker-a-key-secret-video/article_1617f93a-04a3-5cec-9c37-a0657008888c.html
 
