--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-08-08 05:36:16
+lastsearch = 2024-08-08 09:16:36
 
 [demxanh.com]
 match = -41.2%%
@@ -17,14 +17,14 @@ title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm
 url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p44108490.html?spid=44108490
 
 [www.lazada.vn]
-match = -94.1%%
-title = Thảm Bali Trải Sàn Phòng Ngủ Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/tham-bali-trai-san-phong-ngu/
+match = -164.7%%
+title = Thảm Trải Sàn Nhập Khẩu Cao Cấp, Sang Trọng, 2mx3m ...
+url = https://www.lazada.vn/products/tham-li-bali-tham-trai-san-nhap-khau-cao-cap-sang-trong-2mx3m-160x230cm-trang-tri-phong-khach-phong-ngu-chup-hinh-decor-tham-trang-tri-trai-san-sofa-sang-trong-hien-dai-bali-in-3d-i2111887933.html
 
 [thegioidemviet.vn]
-match = -135.3%%
-title = Thảm trải sàn Bali M2 hàng cao cấp, mẫu mã đa dạng
-url = https://thegioidemviet.vn/tham-trai-san-bali-m2/
+match = -182.4%%
+title = Thảm trải sàn Bali M1 cao cấp, giá tốt nhất trên thị trường
+url = https://thegioidemviet.vn/tham-trai-san-bali-m1/
 
 [sammas.vn]
 match = -58.8%%
@@ -32,9 +32,9 @@ title = Thảm lì ép Hàn Quốc (M13) - STHA0008
 url = https://sammas.vn/tham-li-ep-han-quoc-stha0008
 
 [shopee.vn]
-match = -182.4%%
-title = Thảm phòng khách - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/thảm/phòng khách
+match = -200.0%%
+title = thảm lì bali in họa tiết 5d cao cấp trang trí phòng khách ...
+url = https://shopee.vn/Thảm-trải-sàn-thảm-lì-bali-in-họa-tiết-5d-cao-cấp-trang-trí-phòng-khách-phòng-ngủ-i.401842224.9433903363
 
 [vn.my-best.com]
 match = -176.5%%
