--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-08-08 05:41:34
+lastsearch = 2024-08-08 09:17:16
 
 [demxanh.com]
 match = 18.2%%
 title = Thảm trải giường lông cừu TLC 04
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html?srsltid=AfmBOooOqa5faFwtnv5Q448At3aB0blMR-KiP_ryjw7HYuqz_PEjMYLV
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -17,9 +17,9 @@ title = Thảm ghế thảm giường - Trang 5
 url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
 
 [thegioidemonline.vn]
-match = -50.0%%
-title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội
-url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
+match = -109.1%%
+title = Thảm trải giường lông cừu giá rẻ TLC07 - Hà Nội - Chăn ga gối
+url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc07.html
 
 [noithatkenli.vn]
 match = -27.3%%
@@ -29,7 +29,7 @@ url = https://noithatkenli.vn/kich-thuoc-giuong-ngu-cac-loai/
 [ru9.vn]
 match = -86.4%%
 title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu?srsltid=AfmBOoobBt_anMHpqRkM8ndkMijOdP91ZqhzlAuSdVQoRALNj1XdQ4e6
+url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [cafeland.vn]
 match = -45.5%%
@@ -39,7 +39,7 @@ url = https://cafeland.vn/xu-huong/kich-thuoc-giuong-ngu-chuan-theo-phong-thuy-9
 [www.diepxuan.com]
 match = 50.0%%
 title = Điệp Xuân Thảm giường nỉ 120x190
-url = https://www.diepxuan.com/tham-giuong-ni-120x190.html?srsltid=AfmBOoo2kr4lr_fJ6_t9DXbBT97OQd2SSS3HcrqBek6GO3rGRfHU2Xf-
+url = https://www.diepxuan.com/tham-giuong-ni-120x190.html
 
 [shopee.vn]
 match = -81.8%%
@@ -79,7 +79,7 @@ url = https://suongtuyet.com/nem-lo-xo-kim-cuong-divan-asling
 [vikicare.com]
 match = 13.6%%
 title = thảm đá nhiệt nóng - Vikicare
-url = https://vikicare.com/product-tag/tham-da-nhiet-nong/?srsltid=AfmBOorTQx1DA_XFkkFhBirdsxsd7-VVCJd3XDX86nr4fs16owh1YSWI
+url = https://vikicare.com/product-tag/tham-da-nhiet-nong/
 
 [www.linkedin.com]
 match = -86.4%%
@@ -120,4 +120,9 @@ url = https://vn.my-best.com/37098
 match = -136.4%%
 title = 1 clic clac 120x190 et 1 salon avec canapé convertible ...
 url = https://www.booking.com/hotel/fr/maison-de-vacances-avec-piscine-six-fours-les-plages.vi.html
+
+[www.pinterest.com]
+match = -109.1%%
+title = vidaXL Boxspringbett mit Matratze Dunkelgrün 120x190 cm Samt
+url = https://www.pinterest.com/pin/1138777455775055544/
 
