--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-08 06:56:43
+lastsearch = 2024-08-08 10:02:53
 
 [www.diepxuan.com]
 match = 4.5%%
@@ -42,14 +42,14 @@ title = SET GA GỐI TRẦN BÔNG SƠ ĐẬU NÀNH BỌC CHUN 28CM
 url = https://h5.lazada.vn/products/set-ga-goi-tran-bong-so-dau-nanh-boc-chun-28cm-i2270667932-s10970367704.html
 
 [www.sendo.vn]
-match = -72.7%%
-title = Bộ Ga Gối Cao Cấp Siêu Chất, Rẻ Nhất, Xu Hướng Mới Nhất
-url = https://www.sendo.vn/bo-ga-goi-cao-cap.htm
+match = -50.0%%
+title = Bộ Ga Gối Nỉ Nhung MÀU XÁM COCO 1m6x2m in Nổi Hoạ ...
+url = https://www.sendo.vn/bo-ga-goi-ni-nhung-mau-xam-coco-1m6x2m-in-noi-hoa-tiet-mau-moi-2023-116258982.html
 
 [demxanh.com]
-match = -45.5%%
-title = Chiếu cao su non Coco bo chun màu xanh mint
-url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xanh-mint.html
+match = -40.9%%
+title = Chiếu cao su non Coco bo chun màu xám nhạt
+url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xam-nhat.html
 
 [www.tiktok.com]
 match = -59.1%%
