--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-08-07 21:34:53
+lastsearch = 2024-08-08 10:01:07
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -42,14 +42,14 @@ title = Chăn Ga Gối Nệm Đẹp, Cao Cấp, Giá Rẻ - JYSK.vn
 url = https://jysk.vn/bo-vo-chan-goi-ga
 
 [songhong.info]
-match = 3.6%%
-title = Bộ chăn ga gối cao cấp Urban mã UC22-020 -
-url = https://songhong.info/chan-ga-goi-uc020
+match = 10.7%%
+title = Mẫu chăn ga gối cao cấp mã mầu UC22-019
+url = https://songhong.info/chan-ga-goi-uc019
 
 [cuahangchangagoidem.com]
-match = -21.4%%
-title = 6 Mẫu Chăn Ga Gối Đệm Màu Vàng Đẹp Khiến Bạn Mê Say
-url = https://cuahangchangagoidem.com/chan-ga-goi-dem-mau-vang/
+match = -7.1%%
+title = 3 Bộ Chăn Ga Gối Đệm Màu Xám Sang Trọng Với Giá Tốt☑️
+url = https://cuahangchangagoidem.com/chan-ga-goi-dem-mau-xam/
 
 [goni.vn]
 match = 7.1%%
