--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-08-08 08:11:21
+lastsearch = 2024-08-08 09:59:21
 
 [chieutruc.info]
 match = -63.6%%
@@ -24,7 +24,7 @@ url = https://m.facebook.com/groups/400243538122762/posts/989653909181719/
 [nhathuoclongchau.com.vn]
 match = -104.5%%
 title = Mang thai 18 tuần nặng bao nhiêu cân để bé phát triển tốt?
-url = https://nhathuoclongchau.com.vn/bai-viet/thai-18-tuan-nang-bao-nhieu-thay-doi-cua-me-bau-mang-thai-18-tuan.html
+url = https://nhathuoclongchau.com.vn/bai-viet/thai-18-tuan-nang-bao-nhieu-thay-doi-cua-me-bau-mang-thai-18-tuan.html?srsltid=AfmBOoqvuqUS3BEI0-pogq2sk8B_B8fAQKP3POIWSSblAEyHYUx6R7Qt
 
 [www.vinmec.com]
 match = 4.5%%
@@ -174,7 +174,7 @@ url = https://ababy.com.vn/chieu-coi-100x60cm-p429.html
 [demxanh.com]
 match = -31.8%%
 title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
-url = https://demxanh.com/bang-gia-chieu-truc-2018.html
+url = https://demxanh.com/bang-gia-chieu-truc-2018.html?srsltid=AfmBOor_Pb3kE4nNChIKJZKQKzpMEyRSHnE9BI6LSNI-kuQkhoBBGE7X
 
 [tamanhhospital.vn]
 match = -104.5%%
