--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-08-08 07:57:22
+lastsearch = 2024-08-08 09:58:22
 
 [demxanh.com]
-match = 33.3%%
-title = Chiếu điều hòa Nhật Bản NEKIO chính hãng
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html
+match = -3.3%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [suongtuyet.com]
 match = 16.7%%
@@ -62,9 +62,9 @@ title = Chiếu điều hòa – Hiểu chuẩn để rút tiền đúng
 url = http://anhp.vn/chieu-dieu-hoa--hieu-chuan-de-rut-tien-dung-d18928.html
 
 [thegioinem.com]
-match = 33.3%%
-title = 10+ mẫu chiếu điều hoà hot nhất năm
-url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
+match = 13.3%%
+title = Chiếu Điều Hòa Tencel Thoáng Mát Giảm 25%% Tại ...
+url = https://thegioinem.com/chieu-dieu-hoa-3d-tencel.html
 
 [xn--nekiovitnam-y69e.vn]
 match = 3.3%%
