--- a/images/chieu-truc-den-khong-vien-lson-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 lastopen = 2024-06-07 00:19:36
 
 [search]
-lastsearch = 2024-08-08 06:23:18
+lastsearch = 2024-08-08 09:54:56
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -19,7 +19,7 @@ url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-khong-vien-m
 [demxanh.com]
 match = -9.1%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOop1mjPBg8QFvqAL-SANR8iC40Fzso6ZHTJbHY0XToXbV7JcENNq
+url = https://demxanh.com/chieu-truc.html
 
 [dem24h.vn]
 match = 42.4%%
