--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-08-08 05:59:51
+lastsearch = 2024-08-08 09:48:57
 
 [www.lazada.vn]
 match = -212.5%%
@@ -22,9 +22,9 @@ title = [ F4 THAILAND ] Warm Dream - EP.6 - NovelToon
 url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.tiktok.com]
-match = -200.0%%
-title = Reveal time #beautytok #xyzba #hudabeauty #lip @Huda ...
-url = https://www.tiktok.com/@hudabeauty/video/7343308327729761582
+match = -12.5%%
+title = Xiangling Build F2p
+url = https://www.tiktok.com/discover/xiangling-build-f2p?lang=es
 
 [eastcoastbeddingusa.com]
 match = -125.0%%
