--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-08-08 06:54:17
+lastsearch = 2024-08-08 09:55:17
 
 [gobearcats.com]
 match = -142.1%%
@@ -137,9 +137,9 @@ title = Karen Messer | UCSD Profiles
 url = https://profiles.ucsd.edu/karen.messer
 
 [som.cuanschutz.edu]
-match = -121.1%%
-title = Rubin Tuder, MD - School of Medicine - CU Anschutz
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/17863
+match = -163.2%%
+title = Robin Shandas, PhD Professor, University of Colorado - Denver
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/17849
 
 [saveseattleschools.blogspot.com]
 match = -131.6%%
@@ -187,9 +187,9 @@ title = Workers' Compensation Appeals Board - Panel decisions
 url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [pubmed.ncbi.nlm.nih.gov]
-match = -136.8%%
-title = The 5th edition of the World Health Organization ...
-url = https://pubmed.ncbi.nlm.nih.gov/35732829/
+match = -142.1%%
+title = Intensive blood pressure reduction with intravenous ...
+url = https://pubmed.ncbi.nlm.nih.gov/30739745/
 
 [www.sjsu.edu]
 match = -105.3%%
